--- a/style.css
+++ b/style.css
@@ -92,14 +92,126 @@ body {
   }
 
 #next{
-    width: 470px;
-    height: 140px;
-    font-size: 85px;
-    position: absolute; /* postulat de départ */
-    top: 85%; left: 50%; /* à 50%/50% du parent référent */
-    transform: translate(-50%, -50%); /* décalage de 50% de sa propre taille */
-    border: solid 10px #1f74fb;
+    width: 150px;
+    height: 50px;
+    font-size: 15px;
+    position: absolute;
+    top: 85%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: solid 5px #1f74fb;
     border-radius: 25px;
     background-color: #92ceff;
-    cursor:pointer;
+    cursor: pointer;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
 }
+
+#next:hover{
+    border: solid 10px #1f74fb;
+}
+
+@-webkit-keyframes spin{
+  0%{-webkit-transform:rotate(0deg);transform:rotate(0deg);}
+  100%{-webkit-transform:rotate(360deg);transform:rotate(360deg);}
+}
+@keyframes spin{
+  0%{-webkit-transform:rotate(0deg);transform:rotate(0deg);}
+  100%{-webkit-transform:rotate(360deg);transform:rotate(360deg);}
+}
+body{
+  background-color:lightgrey;
+}
+#circle{
+  width:214px;
+  height:214px;
+  background-color:#FFC847;
+  border-radius:214px;
+  position: relative;;
+  top:0;right:0;bottom:0;left:0;
+  margin:auto;
+  box-shadow:0 1px 2px rgba(0,0,0,0.3);
+  display: inline-block;
+  margin: 6% !important;
+}
+#circle:after{
+  content:"";
+  display:block;
+  border:7px dashed white;
+  width:200px;
+  height:200px;
+  border-radius:200px;
+  -webkit-animation: spin 30s linear infinite;
+          animation: spin 30s linear infinite;
+}
+#circle:hover{
+  background-image:radial-gradient(#FFED85, #FFC847 70%);
+}
+#gift{
+  position:absolute;
+  top:0;right:0;left:0;bottom:0;
+  margin:auto;
+  width:100px;
+  height:125px;
+}
+#ribbon{
+  position:relative;
+  width:60px;
+  height:60px;
+  -webkit-transform:rotate(45deg);
+          transform:rotate(45deg);
+  margin:auto;
+  margin-bottom:-38px;
+  border-radius:0 8px 0 8px;
+}
+#ribbon:before{
+  content:"";
+  height:24px;
+  width:100%;
+  background-color:#F04D4D;
+  display:block;
+  position:absolute;
+  top:18px;
+  box-shadow:0 0 1px rgba(0,0,0,0.4);
+  border-radius:inherit;
+}
+#ribbon:after{
+  content:"";
+  height:100%;
+  width:24px;
+  background-color:#F04D4D;
+  display:block;
+  margin:auto;
+  box-shadow:0 0 1px rgba(0,0,0,0.4);
+  border-radius:inherit;
+}
+#giftbox{
+  position:relative;
+  margin:auto;
+  width:100px;
+  height:100px;
+  background-color:white;
+  border-radius:2px;
+  box-shadow:0 0 1px rgba(0,0,0,0.4);
+  overflow:hidden;
+}
+#giftbox:before{
+  content:"";
+  height:24%;
+  width:100%;
+  background-color:#F04D4D;
+  display:block;
+  position:absolute;
+  top:38%;
+  box-shadow:inherit;
+}
+#giftbox:after{
+  content:"";
+  height:100%;
+  width:24%;
+  background-color:#F04D4D;
+  display:block;
+  margin:auto;
+  box-shadow:inherit;
+}
+
