--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     padding: 30vh 1em 0;
-    background: #f6f2e7;
+    background-image: url("https://www.iliketowastemytime.com/sites/default/files/night-sky-hd-wallpaper.jpg");
+    background-size: 100%;
   }
   
   svg {
@@ -20,7 +21,7 @@ body {
     font-size: 8vmin;
     text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", Helvetica, sans-serif;
-    color: #1f74fb;
+    color: white;
   }
   
   .glow {
@@ -105,6 +106,9 @@ body {
     cursor: pointer;
     -webkit-transition: 0.5s;
     transition: 0.5s;
+    font-family: "Lato", sans-serif;
+    text-align: center;
+    text-transform: uppercase;
 }
 
 #next:hover{
@@ -164,6 +168,48 @@ body{
   margin: 10px auto;
   position: relative;
   text-align:center;
+  height: 400px;
+  padding-top: 5%;
+}
+
+#number-1 > img{
+  width: 100%;
+}
+
+#number-2 > img{
+  width: 70%;
+}
+
+#number-3 > img{
+  width: 40%;
+}
+
+#number-4 > img{
+  width: 50%;
+}
+
+#number-1{
+  position: absolute;
+  left: 0vw;
+  width: 25%;
+}
+
+#number-2{
+  position: absolute;
+  left: 25vw;
+  width: 25%;
+}
+
+#number-3{
+  position: absolute;
+  left: 50vw;
+  width: 25%;
+}
+
+#number-4{
+  position: absolute;
+  left: 75vw;
+  width: 25%;
 }
 
 #ribbon{
@@ -255,7 +301,7 @@ h1 {
 }
 
 #title-time{
-  font-family: font;
+  font-family: "Lato", sans-serif;
   text-align: center;
   margin-top: 2em;
   font-size: 1em;
@@ -451,3 +497,20 @@ footer a:hover {
   color: #276FBF;
 }
 
+#time{
+  height: 300px;
+}
+
+canvas{
+	background-color: #000000;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  display: none;
+}
+
+body {
+  overflow-x:hidden;
+}
